trying to make image load

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 <body>
 <div id="debugging" style="position:absolute;top:0;left:0">debugging messages</div>
 <div id="target" />
+<img src="hubs.png"></img>
 <div id="hubs" style="width: 100px; display: none">
 	<img id="hubs-image" src="hubs.png" >
 </div>
